--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
                 from the previous lessons and apply them to this challenge 2,
                 which should be easy, which it is, but is very time consuming.
             </p>
+            <br>
+            <p>This is where my bio is going to go. This is only a test and 
+                I am going to uodate it later when I have the chance. As of
+                now I am just typing so I have an update of what I am doing 
+                and how I am going to get it done. It is a lot and so I just 
+                need to take my time. I need to gather all the stuff I learned
+                from the previous lessons and apply them to this challenge 2,
+                which should be easy, which it is, but is very time consuming.
+            </p>
+            <br>
+            <p>This is where my bio is going to go. This is only a test and 
+                I am going to uodate it later when I have the chance. As of
+                now I am just typing so I have an update of what I am doing 
+                and how I am going to get it done. It is a lot and so I just 
+                need to take my time. I need to gather all the stuff I learned
+                from the previous lessons and apply them to this challenge 2,
+                which should be easy, which it is, but is very time consuming.
+            </p>
     </section>
     
     <section class="work">
