added contact info

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
 
 
-    <section id="Portfolio" class="about">
+    <section id="portfolio" class="about">
         <h2>About Me</h2> 
         <section class="bio">
             <p>This is where my bio is going to go. This is only a test and 
@@ -60,15 +60,15 @@
     <section class="work">
         <h2>Work</h2>
         <section class="work-experience-1">
-            <img src="./assets/placeholder.jpg" alt="work-1">
+            <img src="./assets/placeholder.jpg" alt="work-1 photo">
         <section class="work-experience-2">
-            <img src="./assets/placeholder.jpg" alt="work-2">
+            <img src="./assets/placeholder.jpg" alt="work-2 photo">
         <section class="work-experience-3">
-            <img src="./assets/placeholder.jpg" alt="work-3">
+            <img src="./assets/placeholder.jpg" alt="work-3 photo">
         <section class="work-experience-4">
-            <img src="./assets/placeholder.jpg" alt="work-4">
+            <img src="./assets/placeholder.jpg" alt="work-4 photo">
         <section class="work-experience-5">
-            <img src="./assets/placeholder.jpg" alt="work-5"> 
+            <img src="./assets/placeholder.jpg" alt="work-5 photo" > 
     </section>
 
     <section class="contact">
