added future resume download

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <H1>Tamer Bekir</H1>
         <nav>
             <ul>
-                <li><a href="url">About Me</a></li>
-                <li><a href="url">Work</a></li>
-                <li><a href="url">Contact me</a></li>
-                <li><a href="url">Resume</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact me</a></li>
+                <li><a href="./assets/future resume.pdf" download="">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -23,9 +23,9 @@
         <!-- <p>Welcome to my page!</p> -->
     </section>
 
-<main>
+
     <section>
-            <section class="about me">
+            <section id="about" class="about">
                 <h2>About Me</h2> 
             <section class="bio">
                 <p>This is where my bio is going to go. This is only a test and 
@@ -56,23 +56,32 @@
             </p>
         </section>
     </section>
-        
-<nav>
-    <section class="work">        
+  
+
+    <section id="work" class="work">        
         <h2>Work</h2>
         <section class="experience-1">
-  
-</nav>
+            <img src="./assets/placeholder.jpg" alt="work-1">
+        <section class="experience-2">
+            <img src="./assets/placeholder.jpg" alt="work-1">
+        <section class="experience-3">
+            <img src="./assets/placeholder.jpg" alt="work-1">
+        <section class="experience-4">
+            <img src="./assets/placeholder.jpg" alt="work-1">
+        <section class="experience-5">
+            <img src="./assets/placeholder.jpg" alt="work-1">
     </section>
 
-    <section class="contact">
+    <section id="contact" class="contact">
         <h2>Contact Me</h2>
+    <nav>
         <ul>
             <li>914 772 6918</li>
-            <li> tamerbekir@yahoo.com</li>
+            <li>tamerbekir@yahoo.com</li>
             <li>GitHub</li>
             <li>Instagram</li>
         </ul>
+    </nav>
     </section>
 </main>
     
