added banners/logo placements for photos but did not rearrange them yet

--- a/index.html
+++ b/index.html
@@ -61,16 +61,31 @@
 
     <section id="work" class="work">        
         <h2>Work</h2>
+            <section class="experience-1-banner">
+            </section>
+        <section class="experience-2-banner">
+            </section>
+        <section class="experience-3-banner">
+            </section>
+        <section class="experience-4-banner">
+            </section>
+        <section class="experience-5-banner">
+            </section>
         <section class="experience-1">
-            <img src="./assets/placeholder.jpg" alt="work-1">
+            <img src="./assets/placeholder.jpg" alt="work-6">
+        </section>
         <section class="experience-2">
-            <img src="./assets/placeholder.jpg" alt="work-1">
+            <img src="./assets/placeholder.jpg" alt="work-2">
+        </section>
         <section class="experience-3">
-            <img src="./assets/placeholder.jpg" alt="work-1">
+            <img src="./assets/placeholder.jpg" alt="work-3">
+        </section>
         <section class="experience-4">
-            <img src="./assets/placeholder.jpg" alt="work-1">
+            <img src="./assets/placeholder.jpg" alt="work-4">
+        </section>
         <section class="experience-5">
-            <img src="./assets/placeholder.jpg" alt="work-1">
+            <img src="./assets/placeholder.jpg" alt="work-5">
+        </section>
     </section>
 
     <section id="contact" class="contact">
