--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     </section>
   
 
-    <section id="work" class="work">        
+    <section id="work">        
         <h2>Work</h2>
-            <section class="experience-1-banner">
+        <section class="experience-1-banner">
             </section>
         <section class="experience-2-banner">
             </section>
@@ -99,6 +99,12 @@
         </ul>
     </nav>
     </section>
+<footer>
+    Made by Tamer Bekir
+</footer>
+<footer>
+    
+</footer>
 </main>
     
 </body>
