added links to nav buttons. Added banners for logo with correct positioning. Added footer as well as adjusted elements. Fixed banner and added subtitle

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <H1>Tamer Bekir</H1>
+
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
@@ -20,7 +21,7 @@
     </header>
     <section class="banner">
         <img src="./assets/coding banner.png" alt="coding banner">
-        <!-- <p>Welcome to my page!</p> -->
+        <h2>Welcome to my page!</h2>
     </section>
 
     
@@ -92,10 +93,10 @@
         <h2>Contact Me</h2>
     <nav>
         <ul>
-            <li>914 772 6918</li>
-            <li>tamerbekir@yahoo.com</li>
-            <li>GitHub</li>
-            <li>Instagram</li>
+            <li><a href=”tel:9147726918“>914 772 6918</a></li>
+            <li><a href="mailto:tamerbekir@yahoo.com">TamerBekir@Yahoo.com</a></li>
+             <li><a href="http://https://github.com/Tamerbekir">github<a><li>
+            <li><a href="https://www.instagram.com/keplertam/">Instagram</a></li>
         </ul>
     </nav>
     </section>
