created flexbox layout

--- a/index.html
+++ b/index.html
@@ -2,110 +2,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Tamer Bekir's Portfolio</title>
+    <title>FlexBox Practice</title>
 </head>
-<body>
-    <header>
-        <H1>Tamer Bekir</H1>
 
-        <nav>
-            <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#contact">Contact me</a></li>
-                <li><a href="./assets/future resume.pdf" download="">Resume</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="banner">
-        <img src="./assets/coding banner.png" alt="coding banner">
-        <h2>Welcome to my page!</h2>
+<main>
+    <section class="wrapper">
+        <header class="header">
+            <h1>Header</h1>
+        </header>
+        <article class="main">
+            <p>This is a bio</p>
+        </article>
+        <aside class="aside aside1">
+            <h2>Aside 1</h2>
+        </aside>
+        <aside class="aside aside1">
+            <h2>Aside 2</h2>
+        </aside>
+        <footer class="footer">
+            <h2>Footer</h2>
+        </footer>
     </section>
-
-    
-
-    <section>
-            <section id="about" class="about">
-                <h2>About Me</h2> 
-            <section class="bio">
-                <p>This is where my bio is going to go. This is only a test and 
-                I am going to uodate it later when I have the chance. As of
-                now I am just typing so I have an update of what I am doing 
-                and how I am going to get it done. It is a lot and so I just 
-                need to take my time. I need to gather all the stuff I learned
-                from the previous lessons and apply them to this challenge 2,
-                which should be easy, which it is, but is very time consuming.
-            </p>
-            <br>
-            <p>This is where my bio is going to go. This is only a test and 
-                I am going to uodate it later when I have the chance. As of
-                now I am just typing so I have an update of what I am doing 
-                and how I am going to get it done. It is a lot and so I just 
-                need to take my time. I need to gather all the stuff I learned
-                from the previous lessons and apply them to this challenge 2,
-                which should be easy, which it is, but is very time consuming.
-            </p>
-            <br>
-            <p>This is where my bio is going to go. This is only a test and 
-                I am going to uodate it later when I have the chance. As of
-                now I am just typing so I have an update of what I am doing 
-                and how I am going to get it done. It is a lot and so I just 
-                need to take my time. I need to gather all the stuff I learned
-                from the previous lessons and apply them to this challenge 2,
-                which should be easy, which it is, but is very time consuming.
-            </p>
-        </section>
-    </section>
-  
-
-    <section id="work">        
-        <h2>Work</h2>
-        <section class="experience-1-banner">
-            </section>
-        <section class="experience-2-banner">
-            </section>
-        <section class="experience-3-banner">
-            </section>
-        <section class="experience-4-banner">
-            </section>
-        <section class="experience-5-banner">
-            </section>
-        <section class="experience-1">
-            <img src="./assets/placeholder.jpg" alt="work-6">
-        </section>
-        <section class="experience-2">
-            <img src="./assets/placeholder.jpg" alt="work-2">
-        </section>
-        <section class="experience-3">
-            <img src="./assets/placeholder.jpg" alt="work-3">
-        </section>
-        <section class="experience-4">
-            <img src="./assets/placeholder.jpg" alt="work-4">
-        </section>
-        <section class="experience-5">
-            <img src="./assets/placeholder.jpg" alt="work-5">
-        </section>
-    </section>
-
-    <section id="contact" class="contact">
-        <h2>Contact Me</h2>
-    <nav>
-        <ul>
-            <li><a href=”tel:9147726918“>914 772 6918</a></li>
-            <li><a href="mailto:tamerbekir@yahoo.com">TamerBekir@Yahoo.com</a></li>
-             <li><a href="http://https://github.com/Tamerbekir">github<a><li>
-            <li><a href="https://www.instagram.com/keplertam/">Instagram</a></li>
-        </ul>
-    </nav>
-    </section>
-<footer>
-    Made by Tamer Bekir
-</footer>
 </main>
+
+<body>
     
 </body>
 </html>
-
-
